# swiftmouse

./: .gitignore  Cargo.toml  Readme.md
src/: autotype.rs  bounding_box.rs  gui.rs  image_utils.rs  lib.rs  main.rs  screenshot.rs
src/autotype/: mod.rs
src/globalshortcut/: mod.rs
src/screenshot/: mod.rs
